refac(front): #3621 home fix continuous paragraph
- Continuous paragraph is now showing techniques.


Former-commit-id: 9b5b8cf3b79df16d91fd3b664b359e656ed458fe

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -157,7 +157,8 @@
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
           Vulnerabilities and security issues are continuously detected
           and reported during the entire software development cycle.
-          Fluid Attacks runs comprehensive testing,
+          Fluid Attacks runs comprehensive testing
+          through SAST, DAST, IAST and SCA techniques,
           detecting all vulnerabilities with no false positives.
         </p>
         <div class="dib ph2">
