fix(front): #3625 fix dropdown in cards
- Fixed the buttons in the cards
- Added Read More text in certifications cards


Former-commit-id: 59fcdb0177d26bd99374148f1471c4c63fe1ebbf

--- a/theme/2020/templates/about-us/cardsgen.html
+++ b/theme/2020/templates/about-us/cardsgen.html
@@ -90,13 +90,19 @@
     <div class="cardgrid flex-ns flex-wrap-ns justify-between-m">
       {% for partnerpage in pages if partnerpage.partner %}
       <div class="br3 shadowbox-blog hover-card relative dt-ns mv3 mh2 bg-white w-card">
-        <button class="accordion pointer pa3 w-100 bg-white outline-transparent bn t-all-5">
+        <button class="accordion partner pointer pa3 w-100 bg-white outline-transparent bn t-all-5">
           <img src="{{ SITEURL }}/about-us/partners/{{partnerpage.partnerlogo}}.png" alt="{{partnerpage.alt}}">
+          <br>
+          <div class="fakebt absolute bottom-0 right-0 left-0 fw3 fadein">
+            Read More <br>
+            <img loading="lazy" class="arrow w1 pv3" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/angle-arrow-down.svg"
+                  alt="Fluid Arrow">
+          </div>
         </button>
         <div class="panel pv0 ph2 bg-white t-all-5 overflow-hidden ph4">
           {{ partnerpage.content }}
         </div>
-        <button class="readmore tc fw3 w-100 pointer bn bg-white outline-transparent">
+        <button class="readmore tc fw3 w-100 pointer bn bg-white outline-transparent dn">
           Read More <br>
           <img loading="lazy" class="arrow w1 pv3" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/angle-arrow-down.svg"
                alt="Fluid Arrow">
@@ -115,16 +121,21 @@
       {% for certificationspage in pages if certificationspage.certification %}
       <div class="br3 shadowbox-blog hover-card relative dt-ns mv3 mh2 bg-white w-card">
         <button class="accordion pointer pa3 w-100 bg-white outline-transparent bn t-all-5">
-          <img src="{{ SITEURL }}/about-us/certifications/{{certificationspage.certificationlogo}}.png" alt="{{certificationspage.alt}}"> <br>
+          <img src="{{ SITEURL }}/about-us/certifications/{{certificationspage.certificationlogo}}.png" alt="{{certificationspage.alt}}">
           <h4>
             {{ certificationspage.title }}
           </h4>
+          <div class="fakebt fw3 fadein">
+            Read More <br>
+            <img loading="lazy" class="arrow w1 pv3" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/angle-arrow-down.svg"
+                alt="Fluid Arrow">
+          </div>
         </button>
         <div class="panel pv0 ph2 bg-white t-all-5 overflow-hidden ph4">
           {{ certificationspage.content }}
         </div>
-        <button class="readmore tc fw3 w-100 bn bg-white outline-transparent">
-          &nbsp <br>
+        <button class="readmore tc fw3 w-100 pointer bn bg-white outline-transparent dn">
+          Read More <br>
           <img loading="lazy" class="arrow w1 pv3" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/angle-arrow-down.svg"
                alt="Fluid Arrow">
         </button>
