refac(front): #3633 home fix to portions of text
- Two portions of text were modified on Home section.


Former-commit-id: cd4fd46765899d45ef43e3f3e6ec292436393750

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -65,7 +65,7 @@
     <div class="mySlides fadein dn">
       <div>
         <h2 class="white center roboto w-100 tc pv0-l pv7 ph3 f1-l f2 lh-solid mw7">
-          Effective automation and human intelligence
+          Effective Automation and Human Intelligence
         </h2>
       </div>
     </div>
@@ -201,11 +201,11 @@
       <div class="w-45-l fl-l tl mw6">
         <h3 class="c-fluid-bk roboto f1-ns f2 fw7 mt0 pt3 tl-l tc">One-Shot Hacking</h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
-          Fluid Attacks detects and reports
-          vulnerabilities within one specific
-          version of your application.
-          All existing vulnerabilities are detected
-          with no false positives.
+          Fluid Attacks detects and reports vulnerabilities and security issues
+          within one specific version of your applications.
+          All existing vulnerabilities are identified
+          without false positives among them,
+          thanks to our hybrid approach (tools + human reasoning).
         </p>
         <div class="dib-ns tc">
           <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/services/one-shot-hacking/">
