--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -13,7 +13,7 @@
 
 {% block header %}
 
-<div class="flex-ns flex-wrap-ns justify-between-m banner-bg h50-l h6-m h40-s">
+<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s h50-l h6-m h40-s minh-100vh">
   <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
     <!-- Banner Image-->
     <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto"
@@ -53,16 +53,16 @@
 
 {% block content %}
 
-<div class="slideshow-container bg-quotes">
-  <div class="slideshow-inner justify-center items-center flex w-100 h50-l h6-m h40-s">
-    <div class="mySlides fadein">
+<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s">
+  <div class="slideshow-inner justify-center items-center flex w-100">
+    <div class="mySlides fadein pv6">
       <div>
         <h2 class="white center roboto w-100 tc pv0-l pv7 ph3 f1-l f2 lh-solid mw7">
           Comprehensive Hacking at the Speed of your Business
         </h2>
       </div>
     </div>
-    <div class="mySlides fadein dn">
+    <div class="mySlides fadein dn pv6">
       <div>
         <h2 class="white center roboto w-100 tc pv0-l pv7 ph3 f1-l f2 lh-solid mw7">
           Effective Automation and Human Intelligence
@@ -71,8 +71,8 @@
     </div>
   </div>
   <div class="tc pv4">
-    <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans" onclick='currentSlide(1)'></span>
-    <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans" onclick='currentSlide(2)'></span>
+    <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
+    <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
   </div>
   {% assets output="static/js/contactSlides.min.js", "js/tmp/contactSlides.min.js" %}
   <script type="text/javascript"
@@ -200,7 +200,7 @@
       </div>
       <div class="w-45-l fl-l tl mw6">
         <h3 class="c-fluid-bk roboto f1-ns f2 fw7 mt0 pt3 tl-l tc">One-Shot Hacking</h3>
-        <p class="c-fluid-bk roboto fw1 f4 lh-2">
+        <p class="c-fluid-bk roboto fw1 f5 lh-2">
           Fluid Attacks detects and reports vulnerabilities and security issues
           within one specific version of your applications.
           All existing vulnerabilities are identified
@@ -224,7 +224,7 @@
   </div>
 </div>
 <!-- Ebook section -->
-<div class="bg-dk-red">
+<div class="bg-ebook">
   <div class="pv6">
     <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3">
       Are you going fast in the wrong direction?<br>
@@ -232,102 +232,28 @@
     </h2>
     <div class="tc">
       <a href="https://fluidattacks.docsend.com/view/fcq5m7gihzrfz2fu?utm_source=SalesForce&utm_campaign=4bddad20be-CAMPAIGN_08%2F07_Fluid&utm_medium=email&utm_term=0_1885d82ba1-4bddad20be-251550621">
-        <button class="bannerbt pointer white pv2 ph4 roboto fw7 f5 mt3 dib bt-trans br2 b--white ba">Download eBook Now</button>
+        <button class="bg-transparent pointer white pv2 ph4 roboto fw7 f5 mt3 dib bt-trans br2 b--white ba">Download eBook Now</button>
       </a>
     </div>
   </div>
 </div>
 <!-- About us section -->
-<div class="mw9 center h6 pt6 pb6-ns mt5">
-  <div class="tl fl-l w-40-l">
-    <h2 class="c-fluid-bk center roboto w-100 tl-l tc f1-ns lh3 pl3-l ph3">
+<div class="pt5 pb6-ns mt5">
+  <div class="tc mw7 center">
+    <h2 class="c-fluid-bk roboto tc f1-ns lh3">
       Worldwide Hacking Experts
     </h2>
   </div>
-  <div class="pl3-l pr0-l dib w-100 pb4">
-    <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
-      <li>
-        <p class="roboto fw1 tl f3-ns f5 lh-2 mt2">
-          Since 2001, Fluid Attacks has been developing cybersecurity products
-          and providing solutions for clients in industries like technology,
-          banking, finance, healthcare, insurance, airlines and retail.
-          Fluid Attacks' security experts work closely with organizations
-          to ensure that their systems' vulnerabilities are recognized,
-          with no false positives and no false negatives,
-          and closed at high speed.
-        </p>
-      </li>
-      <li class="pv4">
-        <a class="feature-button-r roboto fw1 fl-l fr tracked-1 f3 no-underline c-lightblack hv-fluid-dkred"
-           href="{{ SITEURL }}/about-us/">
-          <img
-          class="w1 fr relative pt2 mt1 ml2"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-btn.svg"
-          alt="Young hacker smiling">
-          Read more
-        </a>
-      </li>
-    </ul>
-    <ul class="list w-60-l w-70-m w-100 pl6-l flex-l dn center mt4">
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo01.png"
-          alt="RSA logo">
-      </li>
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo02.png"
-          alt="Mazda logo">
-      </li>
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo03.png"
-          alt="Manpower logo">
-      </li>
-    </ul>
-    <ul class="list w-60-l w-70-m w-100 pl6-l flex-l dn center">
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo04.png"
-          alt="Kometsales logo">
-      </li>
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo05.png"
-          alt="Payvalida logo">
-      </li>
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo06.png"
-          alt="Libera logo">
-      </li>
-    </ul>
-    <ul class="list w-60-l w-70-m w-100 pl6-l flex-l dn center">
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo07.png"
-          alt="Berkeley logo">
-      </li>
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo08.png"
-          alt="Young hacker smiling">
-      </li>
-      <li class="w-30 tc">
-        <img
-          class="relative"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo09.png"
-          alt="Young hacker smiling">
-      </li>
-    </ul>
+  <div class="tc mw7 center pb4">
+    <p class="roboto c-fluid-bk fw1 f5 lh-2 mt2 ph5-l">
+      Since 2001, <b class="fw7">Fluid Attacks</b> has been developing
+      cybersecurity products and providing solutions for clients in
+      industries like technology, banking, finance, healthcare, insurance,
+      airlines, and retail.
+    </p>
+    <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/about-us/">
+      Learn More <span class="c-dkred">></span>
+    </a>
   </div>
   {% include "clients-carousel.html" %}
 </div>
