refac(doc): #3489.12 native english improvement
- Change suggested by Santaularia for One-shot paragraph on Home.


Former-commit-id: 372ccdd7d647f8949a8623f40df0d66e2791f429

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -203,9 +203,9 @@
         <p class="c-fluid-bk roboto fw1 f5 lh-2">
           Fluid Attacks detects and reports vulnerabilities and security issues
           within one specific version of your applications.
-          All existing vulnerabilities are identified
-          without false positives among them,
-          thanks to our hybrid approach (tools + human reasoning).
+          Thanks to our hybrid approach
+          (technological tools + human reasoning), all existing vulnerabilities
+          are identified without any false positives.
         </p>
         <div class="dib-ns tc">
           <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/services/one-shot-hacking/">
