refac(front): #3637 resources change in titles
- Some texts on Resources section were changed (including an image).


Former-commit-id: af5a159925f1fd062141797705912d85124c4b4b

--- a/theme/2020/templates/resources/resources.html
+++ b/theme/2020/templates/resources/resources.html
@@ -149,7 +149,7 @@
       class="br3 br--top">
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-          Developing Fast and Preserving Security!
+          Fast Development while Preserving Security
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           How to Develop Products With Speed Without Sacrificing Security? (Spanish)
@@ -189,13 +189,13 @@
       class="br3 br--top">
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-          Please, Stop the Launch!
+          Security for Users or Time-To-Market?
           <br>
           <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          Security for Users or Time-To-Market? (Spanish)
-          <br>
+          Learn about continuous deployment without compromising
+          the security of your application.
         </p>
         <div class="pv4 tc">
           <a href="https://register.gotowebinar.com/register/8185058534297954575">
@@ -211,7 +211,7 @@
       class="br3 br--top">
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-          Drills DataSheet 2020
+          Drills DataSheet
           <br>
           <br>
         </h1>
@@ -233,12 +233,12 @@
       class="br3 br--top">
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-          Successful Security Tests
+          When Is a Security Test Successful?
           <br>
           <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          When Is a Security Test Successful? (Spanish)
+          Elements of a successful testing strategy.
           <br>
         </p>
         <div class="pv4 tc">
@@ -255,10 +255,10 @@
       class="br3 br--top">
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-          Hacking With Speed and Precision
+          eBook: Hacking With Speed and Precision
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          eBook: Don't Crash Going Too Fast (2020).
+          Comprehensive guide on how to protect your company from attacks.
           <br>
           <br>
         </p>
@@ -276,7 +276,7 @@
       class="br3 br--top">
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-          Integrates DataSheet 2020
+          Integrates DataSheet
           <br>
           <br>
         </h1>
@@ -298,7 +298,7 @@
       class="br3 br--top">
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-          Forces DataSheet 2020
+          Forces DataSheet
           <br>
           <br>
         </h1>
@@ -335,12 +335,12 @@
     </div>
     <div
       class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card3.png"
+      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card8.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-          Key Elements of Our Continuous Hacking
+          Continuous Hacking and Vulnerability Remediation
           <br>
           <br>
         </h1>
