refac(front): #3628.4 new home design
- Adjust sizes for the banner blocks, alignments in different screen
sizes
- Fixed the Fluid Attacks team image
-Temporary increase image size admitted for the team's image


Former-commit-id: 02597a03ba8304fbf8de186c26cd4594596cb444

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -286,6 +286,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .w-products { width: 20rem; }
   .w-menu-bt { width: 18px; }
   .dn-s { display: none; }
+  .h40-m { height: 40rem; }
 }
 
 //Large screens
