--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -13,7 +13,7 @@
 
 {% block header %}
 
-<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s h50-l h6-m h40-s minh-100vh">
+<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s h50-l h40-m h40-s minh-100vh">
   <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
     <!-- Banner Image-->
     <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto"
@@ -53,24 +53,24 @@
 
 {% block content %}
 
-<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s">
-  <div class="slideshow-inner justify-center items-center flex w-100 ph4">
-    <div class="mySlides fadein pv6">
+<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s h50-l h40-m h40-s minh-100vh justify-center items-center flex flex-wrap">
+  <div class="slideshow-inner w-100 ph4">
+    <div class="mySlides fadein">
       <div>
-        <h2 class="white center roboto w-100 tc pv0-l pv7 ph3 f1-l f2 lh-solid mw7">
+        <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
           Comprehensive Hacking at the Speed of your Business
         </h2>
       </div>
     </div>
-    <div class="mySlides fadein dn pv6">
+    <div class="mySlides fadein dn">
       <div>
-        <h2 class="white center roboto w-100 tc pv0-l pv7 ph3 f1-l f2 lh-solid mw7">
+        <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
           Effective Automation and Human Intelligence
         </h2>
       </div>
     </div>
   </div>
-  <div class="tc pv4">
+  <div class="tc w-100 dn">
     <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
     <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
   </div>
@@ -89,7 +89,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
         alt="Young hacker smiling">
       </div>
-      <div class="w-45-l fl-l tl mw6">
+      <div class="w-45-l fl-l tl-l tc mw6">
         <img
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-logo.png"
         alt="integrates logo">
@@ -116,7 +116,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
         alt="Young hacker smiling">
       </div>
-      <div class="w-45-l fr-l tr mw6">
+      <div class="w-45-l fr-l tr-l tc mw6">
         <img
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-logo.png"
         alt="Drills logo">
@@ -142,7 +142,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
         alt="Young hacker smiling">
       </div>
-      <div class="w-45-l fl-l tl mw6">
+      <div class="w-45-l fl-l tl-l tc mw6">
         <img
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-logo.png"
         alt="Forces logo">
@@ -225,8 +225,8 @@
     </div>
   </div>
 </div>
-<div class="bg-solutions cover">
-  <div class="mw9 ph5 center pv7-l pv6-m pv4">
+<div class="bg-solutions bg-banner-sz coverm cover-s h50-l minh-100vh justify-center items-center flex flex-wrap">
+  <div class="mw9 ph4 center pv0-l pv4">
     <div class="dib-l width-sols v-top">
       <h2 class="white roboto f2 fw7 title-sols display-sols mv3">
         Security Solutions for your Business
@@ -324,14 +324,14 @@
   </div>
 </div>
 <!-- Ebook section -->
-<div class="bg-ebook">
-  <div class="pv6">
+<div class="bg-ebook bg-banner-sz cover bg-center h50-l h40-m h40-s minh-100vh justify-center items-center flex flex-wrap">
+  <div>
     <h2 class="white center roboto w-100 tc f1-ns f2 lh3 pl3-l ph3 mw7">
       Are you going fast in the wrong direction?<br>
       Hacking with speed and precision
     </h2>
     <div class="tc">
-      <a href="https://fluidattacks.docsend.com/view/fcq5m7gihzrfz2fu?utm_source=SalesForce&utm_campaign=4bddad20be-CAMPAIGN_08%2F07_Fluid&utm_medium=email&utm_term=0_1885d82ba1-4bddad20be-251550621">
+      <a href="https://usa.fluidattacks.com/ebook/">
         <button class="bg-transparent pointer white pv2 ph4 roboto fw7 f5 mt3 dib bt-trans br2 b--white ba">Download eBook Now</button>
       </a>
     </div>
@@ -357,7 +357,7 @@
   </div>
   {% include "clients-carousel.html" %}
 </div>
-<div class="asap-bg asap-bg-s coverm cover-s justify-center items-center flex bg-center">
+<div class="asap-bg asap-bg-s bg-banner-sz cover bg-center h50-l h40-m h40-s minh-100vh justify-center items-center flex flex-wrap">
   <p class="white f2-ns f3 tc roboto b mv0">
     We find all vulnerabilities and report them ASAP
   </p>
