refac(front): #3643 resources add two webinars
- The last two webinars have been added to Resources.


Former-commit-id: 5f0d1f9f96450baf4545f0a6fc7023e1aca0f7d1

--- a/theme/2020/templates/resources/resources.html
+++ b/theme/2020/templates/resources/resources.html
@@ -93,11 +93,11 @@
     </div>
     <div class="tl-l tc pl5-l w-50-l mw6 fl-l ml-auto mr-auto pt3-l ph0-ns ph3">
       <h2 class="f2 lh-solid c-fluid-bk">
-        Asserts is an open-source tool that look for deterministic and
+        Asserts is an open-source tool that looks for deterministic and
         peripheral vulnerabilities
       </h2>
       <p class="fw3 f4 c-fluid-bk">
-        That automates attacks to verify the status of vulnerabilities on your system
+        It automates attacks to verify the status of vulnerabilities on your system
       </p>
       <a href="{{ SITEURL }}/asserts/">
         <button
@@ -152,8 +152,8 @@
           Fast Development while Preserving Security
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          How to Develop Products With Speed Without Sacrificing Security? (Spanish)
-          <br>
+          How to Develop Products With Speed
+          Without Sacrificing Security? (Spanish).
         </p>
         <div class="pv4 tc">
           <a href="https://www.gotostage.com/channel/d38612ee120645cd93ac5ef7f65119f6/recording/287e90418c824496b67638480010f2b4/watch">
@@ -195,7 +195,7 @@
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           Learn about continuous deployment without compromising
-          the security of your application.
+          the security of your app.
         </p>
         <div class="pv4 tc">
           <a href="https://register.gotowebinar.com/register/8185058534297954575">
@@ -260,7 +260,6 @@
         <p class="c-fluid-bk fw3 f5 mv0">
           Comprehensive guide on how to protect your company from attacks.
           <br>
-          <br>
         </p>
         <div class="pv4 tc">
           <a href="https://usa.fluidattacks.com/ebook/">
@@ -323,7 +322,7 @@
           <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          What Data Tells Us About Continuous Hacking
+          What data tells us about continuous hacking.
           <br>
         </p>
         <div class="pv4 tc">
@@ -345,11 +344,55 @@
           <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          What Data Tells Us About Continuous Hacking (Spanish)
+          What data tells us about continuous hacking (Spanish).
           <br>
         </p>
         <div class="pv4 tc">
           <a href="https://register.gotowebinar.com/register/8330343603644644110">
+            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div
+      class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card3.png"
+      alt="Webinar cover ESP"
+      class="br3 br--top">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
+          OWASP No Top 10: 190 Additional Vulnerabilities
+          <br>
+          <br>
+        </h1>
+        <p class="c-fluid-bk fw3 f5 mv0">
+          Learn how you can go beyond the OWASP Top 10
+          in security testing (Spanish).
+        </p>
+        <div class="pv4 tc">
+          <a href="https://register.gotowebinar.com/register/3618185313140820236">
+            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div
+      class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card9.png"
+      alt="Webinar cover ESP"
+      class="br3 br--top">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
+          Developing to Resist
+          <br>
+          <br>
+        </h1>
+        <p class="c-fluid-bk fw3 f5 mv0">
+          How would our software look
+          if agile constructions were the norm? (Spanish).
+        </p>
+        <div class="pv4 tc">
+          <a href="https://register.gotowebinar.com/register/6501685343309054732">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
           </a>
         </div>
