integrates\feat(front): #56.5 add news widget
Former-commit-id: 4db2148fccf0f54a6116c045c784d31c166c6c69

--- a/integrates/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/integrates/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -1,6 +1,6 @@
 :local .container {
   font-size: 18px;
-  margin-right: unset;
+  margin-bottom: 0px;
   background-color: #f5f5f5;
   border-bottom: 2px #e4e4e4 solid;
 }
