--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -13,7 +13,7 @@
 
 {% block header %}
 
-<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s h50-l h40-m h40-s minh-100vh">
+<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s banner-height">
   <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
     <!-- Banner Image-->
     <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto"
@@ -53,7 +53,7 @@
 
 {% block content %}
 
-<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s h50-l h40-m h40-s minh-100vh justify-center items-center flex flex-wrap">
+<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s banner-height justify-center items-center flex flex-wrap">
   <div class="slideshow-inner w-100 ph4">
     <div class="mySlides fadein">
       <div>
@@ -70,7 +70,7 @@
       </div>
     </div>
   </div>
-  <div class="tc w-100 dn">
+  <div class="tc w-100">
     <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
     <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
   </div>
@@ -79,107 +79,148 @@
           src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
   {% endassets %}
 </div>
-</div>
 <div class="mw8 mr-auto ml-auto ph4">
   <div class="w-100">
-    <div class="pv6 dt-ns ml-auto mr-auto">
-      <div class="w-50-l fr-l tc">
-        <img
-        data-aos="zoom-in"
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
-        alt="Young hacker smiling">
-      </div>
-      <div class="w-45-l fl-l tl-l tc mw6">
-        <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-logo.png"
-        alt="integrates logo">
-        <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc">
-          The Platform Element that Controls the Process to Achieve Remediation
-        </h3>
-        <p class="c-fluid-bk roboto fw1 f5 lh-2">
-          <strong class="b">Integrates</strong> is a platform where vulnerabilities
-          are reported, classified and prioritized.
-          It also allows you to define their treatments,
-          as well as check the status
-          and progress of their remediation.
-        </p>
-        <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/products/integrates/">
-          Learn More <span class="c-dkred">></span>
-        </a>
-
-      </div>
-    </div>
-    <div class="pv6 dt-ns ml-auto mr-auto">
-      <div class="w-50-l fl-l tc">
-        <img
-        data-aos="zoom-in"
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
-        alt="Young hacker smiling">
-      </div>
-      <div class="w-45-l fr-l tr-l tc mw6">
-        <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-logo.png"
-        alt="Drills logo">
-        <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc">
-          The Human Element that Continuously Detects Vulnerabilities
-        </h3>
-        <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
-          <strong class="b">Drills</strong> uses the right combination
-          of technology and human intelligence
-          to find deep and zero-day vulnerabilities
-          during the software development life cycle.
-          Forget about false positives and false negatives!
-        </p>
-        <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/products/drills/">
-          Learn More <span class="c-dkred">></span>
-        </a>
+    <div class="banner-height center justify-center items-center flex flex-wrap">
+      <div>
+        <div class="w-50-l fr-l tc">
+          <img
+          data-aos="zoom-in"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
+          alt="Young hacker smiling">
+        </div>
+        <div class="w-45-l fl-l tl-l tc mw6">
+          <img
+          class="pv3"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-logo.png"
+          alt="integrates logo">
+          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
+            The Platform Element that Controls the Process to Achieve Remediation
+          </h3>
+          <p class="c-fluid-bk roboto fw1 f5 lh-2 tl">
+            <strong class="b">Integrates</strong> is a platform where vulnerabilities
+            are reported, classified and prioritized.
+            It also allows you to define their treatments,
+            as well as check the status
+            and progress of their remediation.
+          </p>
+          <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/products/integrates/">
+            Learn More <span class="c-dkred">></span>
+          </a>
+        </div>
       </div>
     </div>
-    <div class="pv6 dt-ns ml-auto mr-auto">
-      <div class="w-50-l fr-l tc">
-        <img
-        data-aos="zoom-in"
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
-        alt="Young hacker smiling">
-      </div>
-      <div class="w-45-l fl-l tl-l tc mw6">
-        <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-logo.png"
-        alt="Forces logo">
-        <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc">
-          The Robot Element that Breaks the Build to Force Remediation
-        </h3>
-        <p class="c-fluid-bk roboto fw1 f5 lh-2">
-          <strong class="b">Forces</strong> allows you to implement
-          DevSecOps into your project.
-          It breaks the build to force the remediation
-          of confirmed deep, re-opened and new peripheral vulnerabilities.
-          It can also verify your post-deploy production status.
-        </p>
-        <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/products/forces/">
-          Learn More <span class="c-dkred">></span>
-        </a>
+    <div class="banner-height center justify-center items-center flex flex-wrap">
+      <div>
+        <div class="w-50-l fl-l tc">
+          <img
+          data-aos="zoom-in"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
+          alt="Young hacker smiling">
+        </div>
+        <div class="w-45-l fr-l tr-l tc mw6">
+          <img
+          class="pv3"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-logo.png"
+          alt="Drills logo">
+          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
+            The Human Element that Continuously Detects Vulnerabilities
+          </h3>
+          <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
+            <strong class="b">Drills</strong> uses the right combination
+            of technology and human intelligence
+            to find deep and zero-day vulnerabilities
+            during the software development life cycle.
+            Forget about false positives and false negatives!
+          </p>
+          <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/products/drills/">
+            Learn More <span class="c-dkred">></span>
+          </a>
+        </div>
       </div>
     </div>
-    <div class="pv6 dt-ns ml-auto mr-auto">
-      <div class="w-50-l fl-l tc">
-        <img
-        data-aos="zoom-in"
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-continuous.png"
-        alt="Young hacker smiling">
+    <div class="banner-height center justify-center items-center flex flex-wrap">
+      <div>
+        <div class="w-50-l fr-l tc">
+          <img
+          data-aos="zoom-in"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
+          alt="Young hacker smiling">
+        </div>
+        <div class="w-45-l fl-l tl-l tc mw6">
+          <img
+          class="pv3"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-logo.png"
+          alt="Forces logo">
+          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
+            The Robot Element that Breaks the Build to Force Remediation
+          </h3>
+          <p class="c-fluid-bk roboto fw1 f5 lh-2 tl">
+            <strong class="b">Forces</strong> allows you to implement
+            DevSecOps into your project.
+            It breaks the build to force the remediation
+            of confirmed deep, re-opened and new peripheral vulnerabilities.
+            It can also verify your post-deploy production status.
+          </p>
+          <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/products/forces/">
+            Learn More <span class="c-dkred">></span>
+          </a>
+        </div>
       </div>
-      <div class="w-45-l fr-l tl mw6">
-        <h3 class="c-fluid-bk roboto f1-ns f2 fw7 mt0 pt3 tr-l tc">Continuous Hacking</h3>
-        <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
-          Vulnerabilities and security issues are continuously detected
-          and reported during the entire software development cycle.
-          Fluid Attacks runs comprehensive testing
-          through SAST, DAST, IAST and SCA techniques,
-          detecting all vulnerabilities with no false positives.
-        </p>
-        <div class="fr-l">
-          <div class="dib-ns tr-l tc">
-            <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/services/continuous-hacking/">
+    </div>
+    <div class="banner-height center justify-center items-center flex flex-wrap">
+      <div>
+        <div class="w-50-l fl-l tc">
+          <img
+          data-aos="zoom-in"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-continuous.png"
+          alt="Young hacker smiling">
+        </div>
+        <div class="w-45-l fr-l tl mw6">
+          <h3 class="c-fluid-bk roboto f1-ns f2 fw7 mt0 pt3 tr-l tc nowrap-l lh3">Continuous Hacking</h3>
+          <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
+            Vulnerabilities and security issues are continuously detected
+            and reported during the entire software development cycle.
+            Fluid Attacks runs comprehensive testing
+            through SAST, DAST, IAST and SCA techniques,
+            detecting all vulnerabilities with no false positives.
+          </p>
+          <div class="fr-l">
+            <div class="dib-ns tr-l tc">
+              <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/services/continuous-hacking/">
+                Learn More <span class="c-dkred">></span>
+              </a>
+            </div>
+            <div class="dib-ns ph3 tc pv0-ns pv3">
+              <a href="{{ SITEURL }}/contact-us/">
+                <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">
+                  Get a Demo
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="banner-height center justify-center items-center flex flex-wrap">
+      <div>
+        <div class="w-50-l fr-l tc">
+          <img
+          data-aos="zoom-in"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-one-shot.png"
+          alt="Young hacker smiling">
+        </div>
+        <div class="w-45-l fl-l tl mw6">
+          <h3 class="c-fluid-bk roboto f1-ns f2 fw7 mt0 pt3 tl-l tc">One-Shot Hacking</h3>
+          <p class="c-fluid-bk roboto fw1 f5 lh-2 tl">
+            Fluid Attacks detects and reports vulnerabilities and security issues
+            within one specific version of your applications.
+            Thanks to our hybrid approach
+            (technological tools + human reasoning), all existing vulnerabilities
+            are identified without any false positives.
+          </p>
+          <div class="dib-ns tc">
+            <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/services/one-shot-hacking/">
               Learn More <span class="c-dkred">></span>
             </a>
           </div>
@@ -193,47 +234,17 @@
         </div>
       </div>
     </div>
-    <div class="pv6 dt-ns ml-auto mr-auto">
-      <div class="w-50-l fr-l tc">
-        <img
-        data-aos="zoom-in"
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-one-shot.png"
-        alt="Young hacker smiling">
-      </div>
-      <div class="w-45-l fl-l tl mw6">
-        <h3 class="c-fluid-bk roboto f1-ns f2 fw7 mt0 pt3 tl-l tc">One-Shot Hacking</h3>
-        <p class="c-fluid-bk roboto fw1 f5 lh-2">
-          Fluid Attacks detects and reports vulnerabilities and security issues
-          within one specific version of your applications.
-          Thanks to our hybrid approach
-          (technological tools + human reasoning), all existing vulnerabilities
-          are identified without any false positives.
-        </p>
-        <div class="dib-ns tc">
-          <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/services/one-shot-hacking/">
-            Learn More <span class="c-dkred">></span>
-          </a>
-        </div>
-        <div class="dib-ns ph3 tc pv0-ns pv3">
-          <a href="{{ SITEURL }}/contact-us/">
-            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">
-              Get a Demo
-            </button>
-          </a>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
-<div class="bg-solutions bg-banner-sz coverm cover-s h50-l minh-100vh justify-center items-center flex flex-wrap">
-  <div class="mw9 ph4 center pv0-l pv4">
+<div class="bg-solutions bg-banner-sz coverm cover-s banner-height justify-center items-center flex flex-wrap">
+  <div class="mw9 pl3 center pv0-l pv4">
     <div class="dib-l width-sols v-top">
       <h2 class="white roboto f2 fw7 title-sols display-sols mv3">
         Security Solutions for your Business
       </h2>
     </div>
-    <div class="dib">
-      <ul class="list roboto white f3-ns f4 fw7 dib-ns ph4-ns ph0">
+    <div class="dib-l ph0-l w-auto-l w5 center">
+      <ul class="list roboto white f3-ns f4 fw7 dib-l ph4 mv0">
         <li>
           <p class="mv0">
             DevSecOps<br>
@@ -244,7 +255,7 @@
           </p>
         </li>
         <li>
-          <p class="mv0">
+          <p class="mv0 nowrap">
             Security Testing<br>
             <img
             class="w3 pb3 mb1"
@@ -262,9 +273,9 @@
           </p>
         </li>
       </ul>
-      <ul class="list roboto white f3-ns f4 fw7 dib-ns ph4-ns ph0">
+      <ul class="list roboto white f3-ns f4 fw7 dib-l ph4 mv0">
         <li>
-          <p class="mv0">
+          <p class="mv0 nowrap">
             Ethical Hacking<br>
             <img
             class="w3 pb3 mb1"
@@ -273,7 +284,7 @@
           </p>
         </li>
         <li>
-          <p class="mv0">
+          <p class="mv0 nowrap">
             Red Teaming<br>
             <img
             class="w3 pb3 mb1"
@@ -282,7 +293,7 @@
           </p>
         </li>
         <li>
-          <p class="mv0">
+          <p class="mv0 nowrap">
             Attack Simulation<br>
             <img
             class="w3 pb3 mb1"
@@ -291,9 +302,9 @@
           </p>
         </li>
       </ul>
-      <ul class="list roboto white f3-ns f4 fw7 dib-ns ph4-ns ph0">
+      <ul class="list roboto white f3-ns f4 fw7 dib-l ph4 mv0">
         <li>
-          <p class="mv0">
+          <p class="mv0 nowrap">
             Vulnerability Assesment<br>
             <img
             class="w3 pb3 mb1"
@@ -311,7 +322,7 @@
           </p>
         </li>
         <li>
-          <p class="mv0">
+          <p class="mv0 nowrap">
             IT Auditing<br>
             <img
             class="w3 pb3 mb1"
@@ -324,12 +335,14 @@
   </div>
 </div>
 <!-- Ebook section -->
-<div class="bg-ebook bg-banner-sz cover bg-center h50-l h40-m h40-s minh-100vh justify-center items-center flex flex-wrap">
+<div class="bg-ebook bg-banner-sz cover bg-center banner-height justify-center items-center flex flex-wrap">
   <div>
     <h2 class="white center roboto w-100 tc f1-ns f2 lh3 pl3-l ph3 mw7">
       Are you going fast in the wrong direction?<br>
-      Hacking with speed and precision
     </h2>
+    <h3 class="white center roboto w-100 tc f2-ns f3 pl3-l ph3 mw7">
+      Hacking with speed and precision
+    </h3>
     <div class="tc">
       <a href="https://usa.fluidattacks.com/ebook/">
         <button class="bg-transparent pointer white pv2 ph4 roboto fw7 f5 mt3 dib bt-trans br2 b--white ba">Download eBook Now</button>
@@ -338,26 +351,28 @@
   </div>
 </div>
 <!-- About us section -->
-<div class="pt5 pb6-ns mt5">
-  <div class="tc mw7 center">
-    <h2 class="c-fluid-bk roboto tc f1-ns lh3">
-      Worldwide Hacking Experts
-    </h2>
+<div class="banner-height justify-center items-center flex flex-wrap">
+  <div class="overflow-hidden">
+    <div class="tc mw7 center">
+      <h2 class="c-fluid-bk roboto tc f1-ns lh3 mv4">
+        Worldwide Hacking Experts
+      </h2>
+    </div>
+    <div class="tc mw7 center pb4">
+      <p class="roboto c-fluid-bk fw1 f5 lh-2 mv4 ph5-l">
+        Since 2001, <b class="fw7">Fluid Attacks</b> has been developing
+        cybersecurity products and providing solutions for clients in
+        industries like technology, banking, finance, healthcare, insurance,
+        airlines, and retail.
+      </p>
+      <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/about-us/">
+        Learn More <span class="c-dkred">></span>
+      </a>
+    </div>
+    {% include "clients-carousel.html" %}
   </div>
-  <div class="tc mw7 center pb4">
-    <p class="roboto c-fluid-bk fw1 f5 lh-2 mt2 ph5-l">
-      Since 2001, <b class="fw7">Fluid Attacks</b> has been developing
-      cybersecurity products and providing solutions for clients in
-      industries like technology, banking, finance, healthcare, insurance,
-      airlines, and retail.
-    </p>
-    <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/about-us/">
-      Learn More <span class="c-dkred">></span>
-    </a>
-  </div>
-  {% include "clients-carousel.html" %}
 </div>
-<div class="asap-bg asap-bg-s bg-banner-sz cover bg-center h50-l h40-m h40-s minh-100vh justify-center items-center flex flex-wrap">
+<div class="asap-bg bg-banner-sz cover bg-center banner-height justify-center items-center flex flex-wrap">
   <p class="white f2-ns f3 tc roboto b mv0">
     We find all vulnerabilities and report them ASAP
   </p>
